--- a/2_HTML_ELEMENTS/index.html
+++ b/2_HTML_ELEMENTS/index.html
@@ -130,10 +130,10 @@
 
 
 
-    <audio controls autoplay muted loop >
+    <!-- <audio controls autoplay loop >
         <source src="./audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-      </audio>
+      </audio> -->
 
 
     <!-- <video src="" controls></video> -->
@@ -144,5 +144,10 @@
     <br/>    <br/>
     <br/>
     <br/>
+      
+      <!-- <img src="https://www.youtube.com/embed/P8P_S1Fjl_Q?si=vuNRs6oDnhUKhg9i" alt=""> -->
+
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/P8P_S1Fjl_Q?si=vuNRs6oDnhUKhg9i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+
 </body>
 </html>
