--- a/4_CSS_INTRO/index.html
+++ b/4_CSS_INTRO/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,11 +14,11 @@
 
 
         <!-- Semantic tags -->
-        <!-- <header>
+        <!-- <header>Premkarthi@501310
 
         </header>
 
-        <section>
+        <section>Premkarthi@501310
 
         </section>
 
