--- a/2_3_#_Haritha-ReInro/index.html
+++ b/2_3_#_Haritha-ReInro/index.html
@@ -25,8 +25,10 @@
         <!-- Relative Path  -->
         <a href="./about.html"> Link 1</a>
 
+        <a href="./about.html"> Link 2</a>
 
-        <img src="./google_logo.svg" alt="Google Image" />
+
+        <img src="./google_logo.svg" alt="Google Image" height="" width="" />
 
         <!-- task   -->
         <!-- Video , audio  -->
@@ -156,11 +158,25 @@
         <br>
         <br>
         <br>
+
+
+        <!-- Sementic Elements -->
+        <header></header>
+        <footer></footer>
+        <video src=""></video>
+        <audio src=""></audio>
+        <section></section>
+        
+
         <br>
         <br>
         <br>
         <br>
         <br>
+
+
+
+
     </body>
 
 </html>
